<resources>
    <string name="app_name">Projektpräsentation Landwirtschaft</string>
    <string name="test">Test</string>
    <string name="quellen">Quellen</string>
    <string name="alternative_motoren">Alternative Motoren</string>
    <string name="e_motor">E-Motor</string>
    <string name="e_traktoren">E-Traktoren</string>
    <string name="synthetischer_kraftstoff">Synthetischer Kraftstoff</string>
    <string name="erneuerbare_energien">Erneuerbare Energien</string>
    <string name="umr_stung">Umrüstung</string>
    <string name="vor_und_nachteile_f_r_den_verbraucher">Vor-und Nachteile für den Verbraucher</string>
    <string name="vor_und_nachteile_f_r_den_landwirt">Vor-und Nachteile für den Landwirt</string>
    <string name="firstLink"><a href="https://www.ingenieur.de/wp-content/uploads/2017/11/2017/19340_e100-Vario-von-Fendt.jpg">https://www.ingenieur.de/wp-content/uploads/2017/11/2017/19340_e100-Vario-von-Fendt.jpg</a></string>
    <string name="secondLink"><a href="https://inverterdrive.com/prodimage/600_WEG-W22-IE3-100L-B3-1.jpg">https://inverterdrive.com/prodimage/600_WEG-W22-IE3-100L-B3-1.jpg</a></string>
    <string name="thirdLink"><a href="https://oswos.com/wp-content/uploads/2020/10/synchron-reluktanzmotor.png">https://oswos.com/wp-content/uploads/2020/10/synchron-reluktanzmotor.png</a></string>
    <string name="fourthLink"><a href="https://wp.tyt.com.mx/wp-content/uploads/2015/02/biocombustiveis1.jpg ">https://wp.tyt.com.mx/wp-content/uploads/2015/02/biocombustiveis1.jpg </a></string>
    <string name="fifthLink"><a href="https://c8.alamy.com/compde/pgt5jt/grune-energie-symbol-schwarzweiss-design-von-kraft-und-energie-ui-pixel-perfect-einfache-piktogramm-grune-energie-symbol-web-design-apps-s-pgt5jt.jpg">https://c8.alamy.com/compde/pgt5jt/grune-energie-symbol-schwarzweiss-design-von-kraft-und-energie-ui-pixel-perfect-einfache-piktogramm-grune-energie-symbol-web-design-apps-s-pgt5jt.jpg</a></string>
    <string name="sixthLink"><a href="https://www.hella.com/agriculture/assets/images/content_global/elektromobilitaet-traktor-landwirtschaft.jpg">https://www.hella.com/agriculture/assets/images/content_global/elektromobilitaet-traktor-landwirtschaft.jpg</a></string>
    <string name="seventhLink"><a href="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzn4bGDUZKlmo1HBZVnCvrly-50EGLXjHojDKdxllgy7uAkrP-">https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzn4bGDUZKlmo1HBZVnCvrly-50EGLXjHojDKdxllgy7uAkrP-</a></string>
    <string name="eightLink"><a href="https://landverliebt.de/magazin/wp-content/uploads/sites/32/2020/05/AdobeStock_200857532-scaled.jpeg">https://landverliebt.de/magazin/wp-content/uploads/sites/32/2020/05/AdobeStock_200857532-scaled.jpeg</a></string>
    <string name="ninthLink"><a href="https://startupexchange.mit.edu/sites/default/files/2021-10/Amogy%20Logo%20-%20without%20background.png">https://startupexchange.mit.edu/sites/default/files/2021-10/Amogy%20Logo%20-%20without%20background.png</a></string>
    <string name="landwirt">Landwirt</string>
    <string name="mensch">Mensch</string>
    <string name="amogy">Amogy</string>
    <string name="synthetischer_kraftstoff1"><b><i><u>Beispiele für Syntethischen Karftstoffe:</u></i></b></string>
    <string name="synthetischer_kraftstoff2">Zukunftsfähig wären aber nur …</string>
    <string name="synthetischer_kraftstoff3"><b>Beispiele:</b></string>
    <string name="synthetischer_kraftstoff4"><b>\n\t Amogy</b></string>
    <string name="synthetischer_kraftstoff5">\t•\t\t	Ammoniak\n\t•\t\t	Methanol\n\t•\t\t	Dimethylether\n\t•\t\t	SNG (Synthetic Natural Gas)\n\t•\t\t	Wasserstoff\n\t•\t\t	Oxymethylenether\n\t•\t\t	Aceton\n\t•\t\t	Hydrazin\n\t•\t\t	Benzol\n\t•\t\t	Nitrobenzol</string>
    <string name="synthetischer_kraftstoff6"><b>Ammoniak:</b>\nAmmoniak wird mit dem Haber-Bosch-Verfahren hergestellt. Dabei wendet man die sogenannte Ammoniaksynthese an.\n\n<b>Wasserstoff:</b>\nGrüner Wasserstoff wird durch die Elektrolyse von Wasser hergestellt. Dafür wird Strom aus erneuerbaren Energien verwendet.</string>
    <string name="amogy1"><b>Mitarbeiter:</b></string>
    <string name="amogy2">\t\t•\tSeonghoon Woo (Vorsitzender, CEO und Mitbegründer)\n\t\t•\tYoung Suk Jo (CTO und Mitbegründer)\n\t\t•\tHyunho Kim (Vizepräsident für Innovation und Mitbegründer) \n\t\t•\tJongwon Choi (Vizepräsident der Fertigung \n\t\t und Mitbegründer) \n\t\t•\tChristian Berg (Geschäftsführer, Amogy Norwegen)</string>
    <string name="amogy3"><b>Geschichte:</b></string>
    <string name="amogy4">Amogy wurde 2020 von vier Leuten gegründet. Dabei war die Idee einen alternativen umweltschonenden Motor zu finden. Durch Forschungen stellte das Team fest, dass die beste Alternative ein Ammoniak Motor ist. Das Ziel ist es, bis 2040 5 Milliarden Tonnen Kohlenstoffdioxid zu reduzieren. Amogy glaubt, dass ein sauberer Motor für Transport (dringend) notwendig ist, da man mithilfe des Motors die Zukunft nachhaltiger gestalten kann.</string>
    <string name="amogy5"><b>Ergebnisse der letzten Jahre und Pläne für die Zukunft:</b></string>
    <string name="amogy6">2020:\n\n<b>November</b> – Die Gründer von Amogy gründeten das Unternehmen offiziell mit dem Ziel, Ammoniak in eine nachhaltige Energiequelle umzuwandeln, um den Transport zu dekarbonisieren.\n\n2021:\n\n<b>März</b> – Abschluss einer Seed-Finanzierungsrunde in Höhe von 3 Mio. USD unter der Leitung von APVentures.\n\n<b>Juli</b> – Erfolgreiche Entwicklung des allerersten emissionsfreien Drohnenflugs mit Ammoniakantrieb im 5-kW-Maßstab.\n\n<b>November</b> – Abschluss einer Serie-A-Finanzierungsrunde in Höhe von 20 Millionen US-Dollar unter der Leitung von AP Ventures und dem Climate Pledge Fund von Amazon.\n\n2022: \n\n<b>Mai</b> – Erfolgreiche Demonstration eines 100-kW-Powerpacks in einem Traktor, 20-fache Skalierung in weniger als einem Jahr.\n\n<b>Juni</b> – Abschluss einer Bridge-Finanzierungsrunde in Höhe von 46 Millionen US-Dollar unter der Leitung von SK, AP Ventures, dem Climate Pledge Fund von Amazon und Saudi Aramco Energy Ventures. Q4 – Es wird erwartet, dass Powerpack für eine Lkw-Demonstration der Klasse 8 auf 300 kW zu skalieren.\n\n2023-2025:\n\n<b>2023</b> – Planung einer Skalierung auf 1 MW in einer Bootsdemonstration, beginn der Kommerzialisierung der Amogy-Technologie.\n\n<b>2024-25</b> – Skalierung auf 10+ MW geplant, um Containerschiffe auf transozeanischen Reisen anzutreiben.</string>
    <string name="umruestung1"><b><i><u>Die Umrüstung</u></i></b></string>
    <string name="umruestung2">Es gibt <b>nicht</b> viele Möglichkeiten für eine Umrüstung. Von daher liegt der Fokus eher auf synthetischen Kraftstoffen. So gibt auch das vereinzelte Beispiel von einem synthetischen Kraftstoff, der zu <b>10%</b> aus <b>Diesel</b> und zu <b>90%</b> aus <b>Wasserstoff</b> besteht.</string>
    <string name="umruestung3"><b><i><u>Beispiel:</u></i></b></string>
    <string name="ee1"><b><i><u>Erneuerbare Energien:</u></i></b></string>
    <string name="ee2">Was zählt alles zu den erneuerbaren Energien?</string>
    <string name="ee3">Wind- und Sonnenenergie sind die wichtigsten erneuerbaren Energieträger. Daneben leisten Biomasse und Wasserkraft einen wertvollen Beitrag zur nachhaltigen Energieversorgung. Windenergie spielt gegenwärtig die tragende Rolle beim Ausbau der erneuerbaren Energien. Die Stromversorgung in Deutschland wird Jahr für Jahr „grüner“. Der Anteil der erneuerbaren Energien am Stromverbrauch wächst beständig: von rund sechs Prozent im Jahr 2000 auf rund 45 Prozent im Jahr 2020. Damit wurde die ursprüngliche Zielmarke von 35 Prozent für das Jahr 2020 deutlich übertroffen.</string>
    <string name="ee4">Aber wie schauts in der Landwirtschaft aus?</string>
    <string name="ee5">Beteiligung:</string>
    <string name="ee6">Denn die deutsche Landwirtschaft ist maßgeblich an der Erzeugung erneuerbarer Energien beteiligt. So sind deutschlandweit 2020 mehr als 9.500 Biogasanlagen mit einer installierten Leistung von über 5.600 Megawatt (MW) in Betrieb. Sie liefern ausreichend Strom für mehr als neun Millionen Haushalte und decken rund 5,4 Prozent des deutschen Stromverbrauchs ab.</string>
    <string name="mensch1"><b><i><u>Vorteile Mensch:</u></i></b></string>
    <string name="mensch2">\t\t-\tVerbesserung der Luftqualität\n\t\t-\tWeniger CO2 Ausstoß</string>
    <string name="mensch3"><b><i><u>Nachteile Mensch:</u></i></b></string>
    <string name="mensch4">\t\t-\tPreise steigen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="la1"><b><i><u>Vorteile Landwirt:</u></i></b></string>
    <string name="la2">\t\t- <b>Kosteneinsparung</b> von <b>Treibstoffverbrauch</b> \n\t\t- Weniger Betriebskosten für die Traktoren\n\t\t- <b>Unabhängiger</b> von <b>fossilen Brennstoffen</b> </string>
    <string name="la3"><b><i><u>Nachteile Landwirt:</u></i></b></string>
    <string name="la4">\t\t- <b>Hohe Anschaffungskosten</b> \n\t\t- Elektrofahrzeuge und andere nachhaltige Mobilitätsoptionen kosten meistens mehr\n\t\t- Elektrofahrzeuge sind nicht so leistungsfähig\n\t\t - Wenige Ladesäulen in Deutschland für Wasserstofftraktoren\n\t\t- Elektrotraktoren nicht für schwere Lasten geeignet</string>
    <string name="beispiele"><b><i><u>Beispiele: </u></i></b></string>
    <string name="beispiele1">Von diesem versprechen sich Experten besonders viel: \n\n\t-\t\tHybridantrieb\n\t-\t\tBioethanol\n\t-\t\tBiodiesel\n\t-\t\tPflanzenöl\n\n\nZukunftsfähig wären aber nur der <b>Wasserstoffantrieb</b> und <b>Ammoniakantrieb</b>.</string>
</resources>