<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Src">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="1dp"
                android:text="@string/alternative_motoren" />

            <TextView
                android:id="@+id/firstsrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirdLink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:text="@string/synthetischer_kraftstoff" />

            <TextView
                android:id="@+id/secondsrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourthLink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:text="@string/erneuerbare_energien" />

            <TextView
                android:id="@+id/thirdsrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifthLink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/umr_stung" />

            <TextView
                android:id="@+id/fourthsrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixthLink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:text="@string/mensch" />

            <TextView
                android:id="@+id/fifthsrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seventhLink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:text="@string/landwirt" />

            <TextView
                android:id="@+id/sixthsrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eightLink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:text="@string/amogy" />

            <TextView
                android:id="@+id/seventhsrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ninthLink" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>